Numeric filter sliders: make tick marks and labels legible by reducing their number when past a threshold we set for that slider width.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@597 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/gobotany.css
+++ b/gobotany/static/gobotany.css
@@ -697,12 +697,8 @@ by javascript, see gobotany.sk.results.notify() */
     padding: 0.25em 0.75em;
 }
 
-input.filter_int {
-    width: 5em;
-}
-
-input.filter_int2 {
-    width: 5em;
+input.filter_int, input.filter_int2 {
+    width: 5.5em;
 }
 
 /* Highlighted glossary words in text. */
