Increase font size on demo index page so links are easier to click.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@601 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/core/templates/index.html
+++ b/gobotany/core/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-    <ul>
+    <ul style="font-size: 1.5em">
       <li><a href="taxon-search/">Taxon Search</a></li>
       <li><a href="piles-pile-groups">Piles and Pile Groups</a></li>
       <li><a href="pile-search/Lycophytes">Pile Querying</a></li>
