Add images to family and genus pages. Refine image browser code and fix some bugs.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@603 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/family.html
+++ b/gobotany/simplekey/templates/simplekey/family.html
@@ -23,7 +23,7 @@
                   {% endif %}
               {% endfor %}
           {% else %}
-              <p>(missing)</p>
+              <img src="" alt="not available">
           {% endif %}
       </p>
       <p class="nav"><a href="#">&lt; prev</a> <span>? of ?</span>
