--- a/gobotany/simplekey/templates/simplekey/genus.html
+++ b/gobotany/simplekey/templates/simplekey/genus.html
@@ -23,7 +23,7 @@
                   {% endif %}
               {% endfor %}
           {% else %}
-              <p>(missing)</p>
+              <img src="" alt="not available">
           {% endif %}
       </p>
       <p class="nav"><a href="#">&lt; prev</a> <span>? of ?</span>
