Recommit of the new "remove" button on guided search filters; apparently my commit yesterday morning failed and I did not notice!
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@605 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/gobotany.css
+++ b/gobotany/static/gobotany.css
@@ -847,3 +847,8 @@ input.filter_int, input.filter_int2 {
 #guided_search_filter_list {
     white-space: nowrap;
 }
+
+#guided_search_filter_list button {
+    background-color: #daa;
+    font-weight: bold;
+}
