Started to tentatively prettify the Dijit ruler, adding a little color so that I can see the size of its <td> element, and moving measurements to the left of each tick like they are on real rulers.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@607 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/gobotany.css
+++ b/gobotany/static/gobotany.css
@@ -245,9 +245,25 @@ p {
     padding: 2em 0;
 }
 
+/* Make the Dijit horizontal slider look like a ruler */
+
 #filter-working .dijitSliderButtonContainerH {
     padding: 0;
 }
+
+#filter-working .dijitSliderBumperH {
+    width: 0px;  /* hmm, not quite right - still 1px off on left - hmm */
+}
+
+#filter-working .dijitSliderDecoration {
+    background-color: #fe8;
+}
+
+#filter-working .dijitRuleLabelH {
+    left: -100%;  /* print lengths left of ticks */
+}
+
+/* --- */
 
 form#results-display {
     font-size: 0.7em;
