Got millimeters actually looking kind-of okay on the slider.  Maybe.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@611 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/gobotany.css
+++ b/gobotany/static/gobotany.css
@@ -261,6 +261,7 @@ p {
 
 #filter-working .dijitRuleLabelH {
     left: -100%;  /* print lengths left of ticks */
+    text-align: right;
 }
 
 /* --- */
