Species page: sort character groups in the All Characteristics section alphabetically by the ad-hoc character group short name.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@618 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -110,7 +110,7 @@
 
           <h3 id="all-characteristics">All Characteristics</h3>
 
-          {% for character_group in character_groups %}
+          {% for character_group in character_groups|dictsort:'short_name' %}
           <div id="title-pane-{{ character_group.name }}"
                dojoType="dijit.TitlePane"
                title="{{ character_group.short_name }}">
