Species page: change to a declarative way of starting with all boxes closed, rather than doing it via code when the page loads.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@619 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -112,7 +112,7 @@
 
           {% for character_group in character_groups|dictsort:'short_name' %}
           <div id="title-pane-{{ character_group.name }}"
-               dojoType="dijit.TitlePane"
+               dojoType="dijit.TitlePane" open="false"
                title="{{ character_group.short_name }}">
               <h4>{{ character_group.short_name }}</h4>
               {% for character_value in taxon.character_values.all %}
