Made the second handle position correctly depending on the ruler height.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@622 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/gobotany.css
+++ b/gobotany/static/gobotany.css
@@ -257,11 +257,11 @@ p {
 
 #filter-working .dijitSliderDecoration {
     background-color: #fe8;
+    border-bottom: 1px solid black;
 }
 #filter-working .dijitSliderImageHandleH > div {
     /* A second handle at the bottom of the ruler, against the inches */
     position: relative;
-    top: 93px;
     height: 16px;
     width: 18px;
     background-image: url("http://ajax.googleapis.com/ajax/libs/dojo/1.5/dijit/themes/claro/form/images/sliderThumbs.png");
