De-emphasize and disable selection for zero-count filter values in the filter working area. Change NA to doesn't apply for display. Hide any zero-count NA value entirely.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@630 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/gobotany.css
+++ b/gobotany/static/gobotany.css
@@ -234,6 +234,10 @@ p {
     margin: 0.6em 0;
 }
 
+#filter-working .values input.zero ~ span {
+    color: #ccc;
+}
+
 #filter-working .info {
     float: left;
     font-size: 0.85em;
