Prevent scroll from going back to the top of the page when browsing images via prev/next links. Prevent link text from being selected/highlighted while clicking.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@631 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/plant_preview.html
+++ b/gobotany/simplekey/templates/simplekey/plant_preview.html
@@ -2,8 +2,8 @@
       <h3></h3>
       <div class="photos">
           <img src="" alt="not available">
-          <p><a href="#">&lt; prev</a> <span>? of ?</span>
-             <a href="#">next &gt;</a></p>
+          <p class="nav"><a>&lt; prev</a> <span>? of ?</span>
+             <a>next &gt;</a></p>
       </div>
       <dl>
       </dl>
