--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -35,8 +35,8 @@
                   <img src="" alt="not available">
               {% endif %}
           </p>
-          <p class="nav"><a href="#">&lt; prev</a> <span>? of ?</span>
-             <a href="#">next &gt;</a></p>
+          <p class="nav"><a>&lt; prev</a> <span>? of ?</span>
+             <a>next &gt;</a></p>
       </div>
 
       <div id="info">
