Glossary pages navigation: remove link for letters that have no terms.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@633 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/help_glossary.html
+++ b/gobotany/simplekey/templates/simplekey/help_glossary.html
@@ -12,9 +12,13 @@ Glossary: {{ this_letter|upper }}
   {% for letter in letters %}
     <li>
       {% if letter = this_letter %}
-        <span class="chosen">{{ letter|upper }}</span>
+        {{ letter|upper }}
       {% else %}
-        <a href="{% url simplekey-help-glossary letter %}">{{ letter|upper }}</a>
+        {% if letter in letters_in_glossary %}
+          <a href="{% url simplekey-help-glossary letter %}">{{ letter|upper }}</a>
+        {% else %}
+          <span class="inactive">{{ letter|upper }}</span>
+        {% endif %}
       {% endif %}
     </li>
   {% endfor %}
