Add legend to distribution map.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@635 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -136,9 +136,8 @@
 
       <div id="more-info">
           <h3>Distribution by County</h3>
-          <!-- TODO: replace src with generated shaded SVG URL -->
           <!--[if IE]>
-          <object src="/static/graphics/new-england-counties.svg"
+          <object src="/maps/{{taxon.genus|lower}}-{{specific_epithet}}-distribution-map/"
                   classid="image/svg+xml" id="dist-county-map"
                   title="distribution map for {{ scientific_name }}">
           <![endif]-->
