Enable link in top navigation to return to initial Plant Identifier page. (There was no easy way to get back to a plant id session from some areas, such as Help/Glossary.)
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@637 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/index.html
+++ b/gobotany/simplekey/templates/simplekey/index.html
@@ -1,9 +1,6 @@
 {% extends "simplekey/base.html" %}
 {% block content %}
-    <h1>Simple Key</h1>
-    <p>
-      Welcome to the simple key Django app.
-    </p>
+    <h1>Plant Identifier: Getting Started</h1>
     <div>
       {{ blurb|safe }}
     </div>
