--- a/gobotany/simplekey/templates/simplekey/base.html
+++ b/gobotany/simplekey/templates/simplekey/base.html
@@ -14,8 +14,13 @@
     <div id="content">
       {% include "simplekey/header.html" %}
       <div id="navlinks">
-        <p>Home | Plant of the Day | <a class="current">Plant Identifier</a> | 
-           Learning Opportunities</p>
+        <p>Home | Plant of the Day |
+            {% ifnotequal request.path "/simple/" %}
+                <a href="/simple/">Plant Identifier</a>
+            {% else %}
+                <a class="current">Plant Identifier</a>
+            {% endifnotequal %}
+        | Learning Opportunities</p>
       </div>
       {% block content %}{% endblock %}
       <div id="foot">
