Remove common name from genus page and search engine text template because we are not planning to provide a common name there.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@644 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/genus.html
+++ b/gobotany/simplekey/templates/simplekey/genus.html
@@ -7,11 +7,10 @@
 {% block content %}
   <h1>Genus <em>{{ item.name }}</em></h1>
   <div id="genus">
-    <h2>{% if item.common_name %}
-            {{ item.common_name }}
-        {% else %}
-            Common name here
-        {% endif %}</h2>
+    {# Common name is not currently planned for genera, but include it if it exists. #}
+    {% if item.common_name %}
+        <h2>{{ item.common_name }}</h2>
+    {% endif %}
 
     <div id="images">
       <h3>Images</h3>
