Fix and tweak a few minor things for pile and pile group pages.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@646 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/page.html
+++ b/gobotany/simplekey/templates/simplekey/page.html
@@ -41,19 +41,23 @@
 <div style="clear: both">&nbsp;</div>
 </div>
 
-    {% endblock %}
-    {% block js_bottom %}
-
-    <script>
-      dojo.require('gobotany.sk.simplekey_page');
-      function toggle_tooltip(slug) {
-          dojo.query('.PileInfo.tooltip').removeClass('active');
-          var tooltip = dojo.byId(slug+'-tooltip');
-          dojo.addClass(tooltip, 'active');
-      }
-    </script>
-  </div>
 {% endblock %}
+
+{% block js_bottom %}
+<script>
+    dojo.require('gobotany.sk.simplekey_page');
+    dojo.addOnLoad(function() {
+        gobotany.sk.simplekey_page.init();
+    });
+
+    function toggle_tooltip(slug) {
+        dojo.query('.PileInfo.tooltip').removeClass('active');
+        var tooltip = dojo.byId(slug+'-tooltip');
+        dojo.addClass(tooltip, 'active');
+    }
+</script>
+{% endblock %}
+
 {% block footer %}
   {% include "simplekey/footcrumbs.html" %}
 {% endblock %}
