On the two types of initial pile group pages: make them show their More Info consistently (on the screen rather than in a popup). Get the plant preview popups working again, using a Dijit Dialog rather than a TooltipDialog for now.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@649 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/footcrumbs.html
+++ b/gobotany/simplekey/templates/simplekey/footcrumbs.html
@@ -4,9 +4,9 @@
   </li>
   <li>
 {% if not pilegroup %}
-    Collections
+    Start: Choose Collection
 {% else %}
-    <a href="/simple/1/">Collections</a>
+    <a href="/simple/1/">Start: Choose Collection</a>
   </li>
   <li>
 {% if not pile %}
