--- a/gobotany/simplekey/templates/simplekey/index.html
+++ b/gobotany/simplekey/templates/simplekey/index.html
@@ -5,7 +5,7 @@
       {{ blurb|safe }}
     </div>
     <p>
-      <a href="1/">Start identifying!</a>
+      <a href="1/">Start: Choose Collection</a>
     </p>
     <p>
       <a href="guided-search/">Guided Search</a>
