--- a/gobotany/simplekey/templates/simplekey/map.html
+++ b/gobotany/simplekey/templates/simplekey/map.html
@@ -4,7 +4,7 @@
 <div id="subway">
   <h2>
     If you know the plant collection<br/>
-    you want to start with, click on it
+    you want to start with, select it
   </h2>
   
   <ul>
