Add basic UI for as-you-type search suggestion feature, starting with static dummy suggestions.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@659 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/header.html
+++ b/gobotany/simplekey/templates/simplekey/header.html
@@ -1,7 +1,4 @@
 <div id="head">
   (header/navigation)<br>
-  <form id="headsearch" action="/simple/search/">
-    <input type="text" name="q" value="{{ request.GET.q }}" size="40">
-    <button>Search</button>
-  </form>
+  {% include "simplekey/search_suggest.html" %}
 </div>
