--- a/gobotany/simplekey/templates/simplekey/base.html
+++ b/gobotany/simplekey/templates/simplekey/base.html
@@ -6,6 +6,8 @@
     {% block js_top %}{% endblock %}
 
     {% include "dojobase.html" %}
+    
+    {% include "simplekey/search_suggest_script.html" %}
 
     <link rel="stylesheet" type="text/css" href="/static/reset.css" />
     <link rel="stylesheet" href="/static/gobotany.css" />
